# palm-calendar-sync2

./: .gitignore  CMakeLists.txt  README.md  datebook.cfg  libusb.h  sync-calendar2.cpp  sync-calendar2.h
distribution/: PKGBUILD  calendar-sync2.def
